added intellij workaround and java setup to setup document